<resources>
    <string name="generic_error_message">Oops, something went wrong</string>
    <string name="loading_awesome_movies">Loading awesome movies</string>
    <string name="loading_movie_details">Loading movie details</string>
    <string name="no_movies_found">No movies found</string>
    <string name="try_again">Try again</string>
    <string name="movie_poster_content_description">A movie poster</string>
    <string name="movie_backdrop_content_description">A shot from the movie</string>

    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="filter">Filter</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="users_rating">Users\' rating</string>
    <string name="release_date">Release date</string>

    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>

    <string name="trailer_count">Trailer #%1$d</string>

    <string name="trailer_content_description">A movie trailer</string>

</resources>
