<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminateOnly="true"
        android:visibility="invisible"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_error_message"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:drawableTop="@drawable/ic_error_outline_black_24dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/bt_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:onClick="reload"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_awesome_movies"
        android:visibility="invisible"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_timer_gray_24dp" />

</merge>