<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.DetailsActivity"
    tools:showIn="@layout/activity_details">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            app:layout_constraintBottom_toTopOf="@+id/barrier3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loading_poster" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_ratings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/users_rating"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rb_user_votes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/rb_user_votes"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="10"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="0.0"
            app:layout_constraintBottom_toTopOf="@+id/tv_release_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_ratings_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_ratings_label" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_ratings_label"
            app:layout_constraintTop_toBottomOf="@+id/rb_user_votes" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/barrier3"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:layout_marginEnd="383dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="rb_user_votes,tv_release_date,guideline,tv_release_date_label,iv_movie_poster,tv_ratings_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier3"
            android:padding="16dp"
            android:textSize="15sp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>